--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -7,6 +7,7 @@ bold_italic_font auto
 font_size 16.0
 
 macos_traditional_fullscreen yes
+background_blur 0
 
 # Theme
 foreground #f8f8f2
@@ -17,7 +18,7 @@ url_color #d65c9d
 cursor #8fee96
 
 term xterm-256color
-background_opacity 0.60
+background_opacity 0.70
 
 color0  #000000
 color8  #44475a
